# axum-rest-server

./: Cargo.toml
src/: error.rs  main.rs
tests/: quick_dev.rs
