[package]
name = "axum-rest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
lazy-regex = "3.0.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
strum_macros = "0.25.2"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }

[dev-dependencies]
httpc-test = "0.1.5"
